--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --write 'src/**/*.{js,jsx,json,css}'"
   },
   "dependencies": {
     "next": "15.4.4",
@@ -16,12 +17,9 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "24.1.0",
-    "@types/react": "19.1.8",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
     "prettier": "3.6.2",
-    "tailwindcss": "^4",
-    "typescript": "5.8.3"
+    "tailwindcss": "^4"
   }
 }
