--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.4.4",
-    "@eslint/eslintrc": "^3"
+    "@eslint/eslintrc": "^3",
+    "prettier": "3.6.2"
   }
 }
